# trainig-teaching-draft

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
interactive/: data_explorations.ipynb  models_explorations.ipynb
scripts/: build_container.sh  train.sh  train_container.sh
training_draft/: train.py
