[tool.poetry]
name = "training-draft"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
tensorflow = "2.13.0"
tensorflow-datasets = "^4.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
